<resources>
    <string name="app_name">FoodCourt</string>
    <string name="action_settings">Settings</string>

    <!-- 't' prefix: title, followed by ':' -->

    <!-- Activity Types -->
    <string name="tSelectActivity">Select Activity:</string>
    <string name="walking">Walking</string>
    <string name="queueing">Queueing</string>
    <string name="idle">Idle</string>
    <string name="queueStep">Queue Step</string>

    <!-- Actions -->
    <string name="accelStart">Start</string>
    <string name="accelPause">Pause</string>
    <string name="accelStop">Stop</string>
    <string name="accelCalibrate">Calibrate Accel</string>

    <!-- Misc -->
    <string name="data">data</string>
    <string name="tClassification">Classification:</string>

    <!-- database -->
    <string name="dbReset">Reset DB</string>
    <string name="dbLastData">Last Record</string>
    <string name="accelExportAct">Export Activity</string>
    <string name="accelExportBias">Export Bias</string>


</resources>
